{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "InGameKeys",
            "id": "437fbb99-fa0a-4a26-8f02-30417f60621e",
            "actions": [
                {
                    "name": "ServeBall",
                    "type": "Button",
                    "id": "e04e4b1c-9315-4247-9125-93d0e1e5ca4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player1MoveUp",
                    "type": "Button",
                    "id": "9858898b-9b3a-47da-8f52-d825236dd1ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player1MoveDown",
                    "type": "Button",
                    "id": "3a63e302-7ef1-484c-a2fb-891716f92528",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2MoveUp",
                    "type": "Button",
                    "id": "c90194d2-9262-4eec-a991-9d435f1b80d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2MoveDown",
                    "type": "Button",
                    "id": "367b7708-b92f-4061-973e-6583c5899f25",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "ee7fb565-0373-437e-8bc2-bfbdddb2cad8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b383d299-8ffd-4094-ab7d-db00fc482cb0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ServeBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8ced040-fc53-4087-9926-00d84bbd459c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00951320-dc35-426f-afac-2642ba706b2f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8c6a4c4-1df2-4292-aa47-4c604331fea1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bf87790-ac4b-49a9-af2f-f57d4fc5e0d2",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc71aace-0bd4-4929-b1d0-f384790c6dca",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5436f631-6aaf-4008-9b4f-93d50d1201bf",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}